--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 18:05:02 2018</p>
+         Last Run: Mon Nov  5 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-7</td>
                         <td>-12</td>
-                        <td>24</td>
-                        <td>88</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>NE</td>
-                        <td>98</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-6</td>
-                        <td>-10</td>
-                        <td>13</td>
-                        <td>75</td>
+                        <td>37</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
                         <td>97</td>
                      </tr>
                      <tr>
-                        <td>11:00 PM</td>
+                        <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>9</td>
-                        <td>75</td>
+                        <td>20</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
                         <td>96</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>9</td>
+                        <td>74</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>NE</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-12",
-                 "-10",
-                 "-11"
+                 "-11",
+                 "-10"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-7",
-                 "-6",
-                 "-7"
+                 "-7",
+                 "-6"
                ]
              }
            ]
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "13",
+                 "37",
+                 "20",
                  "9"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "75",
-                 "75"
+                 "84",
+                 "84",
+                 "74"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
                  "97",
-                 "96"
+                 "96",
+                 "95"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 18:05:02 2018</p>
+         Last Run: Mon Nov  5 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -250,19 +250,19 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>4</td>
-                        <td>75</td>
+                        <td>-9</td>
+                        <td>-13</td>
+                        <td>3</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -274,7 +274,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -306,7 +306,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-13",
-                 "-14",
+                 "-13",
                  "-14"
                ]
              },
@@ -318,7 +318,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-9",
-                 "-10",
+                 "-9",
                  "-10"
                ]
              }
@@ -377,7 +377,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "4",
+                 "3",
                  "3"
                ]
              },
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "75",
-                 "74"
+                 "72",
+                 "72",
+                 "72"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "1",
                  "1"
                ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 18:05:02 2018</p>
+         Last Run: Mon Nov  5 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -464,36 +464,36 @@
                         <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>-1</td>
-                        <td>5</td>
+                        <td>1</td>
                         <td>51</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>36</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>5</td>
-                        <td>50</td>
+                        <td>1</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>43</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>5</td>
+                        <td>1</td>
                         <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>46</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,9 +591,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "51",
-                 "50",
+                 "49",
                  "48"
                ]
              },
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "43",
-                 "46"
+                 "34",
+                 "39",
+                 "41"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 18:05:02 2018</p>
+         Last Run: Mon Nov  5 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
