--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 19:05:02 2018</p>
+         Last Run: Mon Nov  5 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,20 +32,20 @@
                         <td>09:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-7</td>
-                        <td>-12</td>
-                        <td>37</td>
-                        <td>84</td>
+                        <td>-11</td>
+                        <td>54</td>
+                        <td>85</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NE</td>
                         <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>20</td>
+                        <td>36</td>
                         <td>84</td>
                         <td>0</td>
                         <td>8</td>
@@ -55,12 +55,12 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-6</td>
+                        <td>-7</td>
                         <td>-10</td>
-                        <td>9</td>
-                        <td>74</td>
+                        <td>20</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NE</td>
                         <td>95</td>
                      </tr>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
+                 "-11",
                  "-11",
                  "-10"
                ]
@@ -103,7 +103,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-6"
+                 "-7"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
-                 "20",
-                 "9"
+                 "54",
+                 "36",
+                 "20"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "85",
                  "84",
-                 "84",
-                 "74"
+                 "84"
                ]
              },
              {
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 19:05:02 2018</p>
+         Last Run: Mon Nov  5 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 19:05:02 2018</p>
+         Last Run: Mon Nov  5 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -469,7 +469,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>34</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -481,7 +481,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>39</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -493,7 +493,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "39",
-                 "41"
+                 "33",
+                 "38",
+                 "40"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 19:05:02 2018</p>
+         Last Run: Mon Nov  5 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
