--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov  7 10:05:02 2018</p>
+         Last Run: Wed Nov  7 11:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -37,8 +37,8 @@
                         <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>2</td>
+                        <td>WSW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "69",
-                 "71"
+                 "70",
+                 "70"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
-                 "0",
-                 "1"
+                 "1",
+                 "1",
+                 "2"
                ]
              }
            ]
