--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov  7 22:05:06 2018</p>
+         Last Run: Thu Nov  8 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -29,16 +29,40 @@
                   </thead>
                   <tbody>
                      <tr>
+                        <td>09:00 PM</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>5</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>28</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>5</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>20</td>
+                     </tr>
+                     <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>5</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>81</td>
-                        <td>0</td>
-                        <td>6</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -53,6 +77,8 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
+             "09:00 PM",
+             "10:00 PM",
              "11:00 PM"
            ],
            "datasets":[
@@ -63,7 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15"
+                 "-6",
+                 "-6",
+                 "-8"
                ]
              },
              {
@@ -73,7 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11"
+                 "-2",
+                 "-2",
+                 "-3"
                ]
              }
            ]
@@ -119,6 +149,8 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
+             "09:00 PM",
+             "10:00 PM",
              "11:00 PM"
            ],
            "datasets":[
@@ -128,7 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -137,7 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81"
+                 "66",
+                 "66",
+                 "68"
                ]
              },
              {
@@ -146,7 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3"
+                 "28",
+                 "20",
+                 "17"
                ]
              }
            ]
@@ -181,7 +219,6 @@
                      options: options
                   });
                </script>
-         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
    </body>
