--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  8 10:05:03 2018</p>
+         Last Run: Thu Nov  8 11:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,15 +46,15 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>30</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-8</td>
                         <td>5</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "70",
-                 "69",
                  "71"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "30",
-                 "28"
+                 "38",
+                 "32",
+                 "30"
                ]
              }
            ]
