--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  8 13:05:03 2018</p>
+         Last Run: Thu Nov  8 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
+                        <td>3</td>
                         <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>33</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>70</td>
+                        <td>4</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>28</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "3",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "70",
+                 "69",
                  "71"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "23",
-                 "18"
+                 "28",
+                 "28",
+                 "28"
                ]
              }
            ]
